<resources>
    <string name="app_name">九点画画</string>
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="network_defeated">网络连接失败</string>
    <string name="start_preview_button">开始预览</string>
    <string name="stop_preview_button">停止预览</string>
    <string name="pause_button">暂停</string>
    <string name="resume_button">恢复</string>
    <string name="repush_button">重新推流</string>
    <string name="alivc_beauty">美颜</string>
    <string name="alivc_fine_tune">微调</string>
    <string name="beauty_whitening">美白</string>
    <string name="beauty_buffing">磨皮</string>
    <string name="beauty_blush">红润</string>
    <string name="beauty_lip_gloss">腮红</string>
    <string name="beauty_short_jaw">缩下巴</string>
    <string name="beauty_on">开启美颜</string>
    <string name="beauty_off">关闭美颜</string>
    <string name="beauty_white">美白</string>
    <string name="beauty_skin_smooth">磨皮</string>
    <string name="beauty_ruddy">红润</string>
    <string name="beauty_brightness">亮度</string>
    <string name="beauty_cheekpink">腮红</string>
    <string name="beauty_thinface">瘦脸</string>
    <string name="beauty_shortenface">收下巴</string>
    <string name="beauty_bigeye">大眼</string>
    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_bluetooth_permission">没有权限使用蓝牙，请开启蓝牙权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>
    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
    <string name="no_music">无音乐</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="stop">停止</string>
    <string name="start">开始</string>
    <string name="close_loop">关循环</string>
    <string name="open_loop">开循环</string>
    <string name="close_mute">关静音</string>
    <string name="open_mute">开静音</string>
    <string name="close_ears_back">关耳返</string>
    <string name="open_ears_back">开耳返</string>
    <string name="close_audio_denoise">关降噪</string>
    <string name="open_audio_denoise">开降噪</string>
    <string name="accompaniment">伴奏</string>
    <string name="voice">人声</string>
    <string name="internet_music">网络音乐</string>
    <string name="ok">确定</string>
    <string name="dialog_title">错误提示</string>
    <string name="reconnect">重连</string>
    <string name="live_scene_list">直播场景列表</string>
    <string name="audio_bitrate_value">64</string>
    <string name="setting_resolution_180P">180P</string>
    <string name="setting_resolution_240P">240P</string>
    <string name="setting_resolution_360P">360P</string>
    <string name="setting_resolution_480P">480P</string>
    <string name="setting_resolution_540P">540P</string>
    <string name="setting_resolution_720P">720P</string>
    <string name="setting_audio_480">48KHz</string>
    <string name="setting_audio_441">44.1KHz</string>
    <string name="setting_audio_320">32KHz</string>
    <string name="setting_audio_aac_lc">LC</string>
    <string name="setting_audio_aac_he">HE-AAC</string>
    <string name="setting_audio_aac_hev2">HEv2-AAC</string>
    <string name="setting_audio_aac_ld">AAC-LD</string>
    <string name="setting_audio_aac_eld">ELD</string>
    <string name="push_url_messge">防止多人使用同一地址推流造成异常，建议更换推流地址</string>
    <string name="pusher_setting">推流设置</string>
    <string name="input_tips">请输入推流地址或扫描二维码</string>
    <string name="resolution_label">分辨率</string>
    <string name="target_bitrate">目标码率</string>
    <string name="target_rate_value">1200</string>
    <string name="min_bitrate">最小码率</string>
    <string name="min_rate_value">300</string>
    <string name="initial_bitrate">初始码率</string>
    <string name="audio_bitrate">音频码率</string>
    <string name="initial_bit_value">1000</string>
    <string name="captrue_fps">采集帧率</string>
    <string name="init_fps">20</string>
    <string name="audio_sampling_rate">音频采样率</string>
    <string name="audio_profile">音频编码</string>
    <string name="audio_rate_value">20</string>
    <string name="sound_track">声道</string>
    <string name="single_track">单声道</string>
    <string name="dual_track">双声道</string>
    <string name="quality_mode">码控模式</string>
    <string name="quality_resolution_first">清晰度优先</string>
    <string name="quality_fluency_first">流畅度优先</string>
    <string name="quality_custom">自定义</string>
    <string name="beauty_mode_nornal">标准版</string>
    <string name="beauty_mode_professional">专业版</string>
    <string name="reconnect_duration">重连时长</string>
    <string name="reconnect_value">1000</string>
    <string name="reconnect_times">重连次数</string>
    <string name="retry_count">5</string>
    <string name="landscape_model">横屏推流</string>
    <string name="portrait">Portrait</string>
    <string name="homeLeft">HomeLeft</string>
    <string name="homeRight">HomeRight</string>
    <string name="front_camera">前置摄像头</string>
    <string name="setting_pre_mirror">预览镜像</string>
    <string name="setting_push_mirror">推流镜像</string>
    <string name="display_mode">显示模式</string>
    <string name="display_mode_full">拉伸</string>
    <string name="display_mode_fit">适合</string>
    <string name="display_mode_cut">剪裁</string>
    <string name="watermark">水印</string>
    <string name="watermark_setting">水印位置</string>
    <string name="audio_only_push_streaming">纯音频</string>
    <string name="video_only_push_streaming">纯视频</string>
    <string name="audio_hardware_encode">音频硬编</string>
    <string name="audio_software_encode">音频软编</string>
    <string name="bitrate_control">码控</string>
    <string name="extern_stream_mix">自定义混流</string>
    <string name="extern_stream_main">自定义主流</string>
    <string name="pause_image">暂停图片</string>
    <string name="network_image">网络差图片</string>
    <string name="variable_resolution">可变分辨率</string>
    <string name="video_mix_streaming">混流</string>
    <string name="screen_capture">开启录屏</string>
    <string name="beauty_mode_face">美颜模式</string>
    <string name="auto_focus">自动对焦</string>
    <string name="beauty_enable">开启美颜</string>
    <string name="hardware_encode">硬编</string>
    <string name="software_encode">软编</string>
    <string name="asynchronous_interface">异步接口</string>
    <string name="start_button">开始推流</string>
    <string name="stop_button">停止推流</string>
    <string name="more_setting_button">更多设置</string>
    <string name="slide_right_view_log_char">右滑查看log图表</string>
    <string name="slide_left_view_log">左滑查看log</string>
    <string name="share_button">分享</string>
    <string name="dy_add_button">加贴纸</string>
    <string name="dy_remove_button">删贴纸</string>
    <string name="local_log">本地日志</string>
    <string name="times">次</string>
    <string name="start_preview">开始预览</string>
    <string name="stop_preview">停止预览</string>
    <string name="start_push">开始推流</string>
    <string name="stop_push">停止推流</string>
    <string name="pause_push">暂停</string>
    <string name="resume_push">恢复</string>
    <string name="first_frame">首帧渲染</string>
    <string name="setting_flash">开启闪光灯</string>
    <string name="GOP">Gop</string>
    <string name="push_url">推流地址</string>
    <string name="ispushing">是否推流</string>
    <string name="network_poor">网络差，请退出或者重连</string>
    <string name="network_recovery">网络恢复</string>
    <string name="reconnect_start">重连开始</string>
    <string name="reconnect_fail">重连失败</string>
    <string name="connect_fail">连接失败</string>
    <string name="send_message">发送消息</string>
    <string name="reconnect_success">重连成功</string>
    <string name="senddata_timeout">发送数据超时</string>
    <string name="restart_success">重启成功</string>
    <string name="bgm_open_failed">音乐文件打开失败</string>
    <string name="system_error">系统错误：</string>
    <string name="sdk_error">SDK错误：</string>
    <string name="bite_error">码率参数设置错误！</string>
    <string name="drop_frame">丢帧</string>
    <string name="adjust_bitrate">调整码率</string>
    <string name="adjust_fps">调整帧率</string>
    <string name="url_empty">请输入推流地址</string>
    <string name="min_fps">最小帧率</string>
    <string name="auth_text">鉴权时间</string>
    <string name="privacy_text">密钥</string>
    <string name="no_network">没有网络</string>
    <string name="live_go_out_time">直播时间已经到,无法继续直播</string>
    <string name="if_exit_live">是否结束直播</string>
    <string name="speak_what">说点什么吧</string>
    <string name="focus">已关注</string>
    <string name="not_focus">+关注</string>
    <string name="plase_login">请登录</string>
    <string name="same_focus">相互关注</string>
    <string name="end_live">结束</string>
    <string name="welcome_live">欢迎到直播间...</string>
    <string name="listen_class_sum">听课人数： </string>
    <string name="start_live">开始直播</string>
    <string name="liveing">直播中</string>
    <string name="play_back">回放</string>
    <string name="no_live">未直播</string>
    <string name="live_time_going">直播时间已过</string>
    <string name="no_live_time">暂未到开播时间，开播时间为</string>
    <string name="traffic_data">目前手机流量是否继续</string>
    <string name="teacher_living">老师暂未直播</string>
    <string name="live_network_error">网络出现错误 ，请重新开播</string>
    <string name="send">发送</string>
    <string name="cencel">取消</string>
    <string name="confirm">确定</string>
    <string name="host">主持人</string>
    <string name="speaker">讲师</string>
    <string name="guester">嘉宾</string>
    <string name="manager">管理员</string>
    <string name="string_bind_phone">绑定手机号</string>
    <string name="string_input_phone_number">请输入手机号</string>
    <string name="string_verification_code">请输入验证码</string>
    <string name="string_apply_code">获取验证码</string>
    <string name="string_register">注册</string>
    <string name="string_login">登录</string>
    <string name="string_turn_artfire_code_login">切换艺伙号登录</string>
    <string name="string_bind_phone_explain">点击“绑定手机号”按钮，代表您已经阅读并同意</string>
    <string name="string_submit">提交</string>
    <string name="string_about_us">关于我们</string>
    <string name="string_change_password">修改密码</string>
    <string name="string_only_wifi_look">仅WI-FI观看</string>
    <string name="string_login_out">退出登录</string>
    <string name="string_opinion_email">联系方式（选题）</string>
    <string name="string_feedback_explan">如有需要，留下您的联系方式，方便我们联系您</string>
    <string name="string_feedback_content">反馈内容</string>
    <string name="string_other_login_way">其他登陆方式</string>
</resources>