<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">


    <ImageView
        android:id="@+id/img_portrait"
        android:layout_width="@dimen/margin_75"
        android:layout_height="@dimen/margin_75"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_23"
        android:layout_marginTop="@dimen/margin_38"
        android:src="@mipmap/head_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_portrait"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_10"
        android:text="杨先生"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/ll_input_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_portrait"
        android:layout_marginLeft="@dimen/margin_34"
        android:layout_marginRight="@dimen/margin_34"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg"
                    android:hint="@string/string_input_phone_number"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textColor="@color/text_444"
                    android:textColorHint="@color/text_999"
                    android:textSize="@dimen/text_14" />


            </LinearLayout>


        </LinearLayout>

        <View
            style="@style/line"
            android:layout_marginTop="@dimen/margin_12" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_8">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_10"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg"
                    android:hint="@string/string_verification_code"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textColor="@color/text_444"
                    android:textColorHint="@color/text_999"
                    android:textSize="@dimen/text_14" />


            </LinearLayout>

            <TextView
                android:id="@+id/apply_code_on_login_by_phone"
                android:layout_width="@dimen/margin_77"
                android:layout_height="@dimen/margin_26"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="@drawable/input_stroke_1dp_d7d7d7"
                android:gravity="center"
                android:text="@string/string_apply_code"
                android:textColor="@color/text_ccab86"
                android:textSize="@dimen/text_13" />
        </RelativeLayout>

        <View style="@style/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/string_bind_phone_explain"
            android:textColor="@color/black"
            android:textSize="@dimen/text_10" />


        <TextView
            android:id="@+id/login_on_login_by_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_34"
            android:layout_marginTop="@dimen/margin_43"
            android:background="@drawable/solide_ccab86_5dp"
            android:gravity="center"
            android:text="@string/string_bind_phone"
            android:textColor="@color/white"
            android:textSize="@dimen/text_15" />

    </LinearLayout>


</RelativeLayout>
