<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/margin_73"
        android:layout_height="@dimen/margin_73"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_95"
        app:cardCornerRadius="@dimen/margin_5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/barrage_off" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_input_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view"
        android:layout_marginLeft="@dimen/margin_34"
        android:layout_marginRight="@dimen/margin_34"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:textColor="@color/text_ccab86"
                android:textSize="@dimen/text_14" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg"
                    android:hint="@string/string_input_phone_number"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textColor="@color/text_444"
                    android:textColorHint="@color/text_999"
                    android:textSize="@dimen/text_14" />


            </LinearLayout>


        </LinearLayout>

        <View
            style="@style/line"
            android:layout_marginTop="@dimen/margin_12" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_8">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_10"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg"
                    android:hint="@string/string_verification_code"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textColor="@color/text_444"
                    android:textColorHint="@color/text_999"
                    android:textSize="@dimen/text_14" />


            </LinearLayout>

            <TextView
                android:id="@+id/apply_code_on_login_by_phone"
                android:layout_width="@dimen/margin_77"
                android:layout_height="@dimen/margin_26"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="@drawable/input_stroke_1dp_d7d7d7"
                android:gravity="center"
                android:text="@string/string_apply_code"
                android:textColor="@color/text_ccab86"
                android:textSize="@dimen/text_13" />
        </RelativeLayout>

        <View style="@style/line" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/string_register"
            android:textColor="@color/text_444"
            android:textSize="@dimen/text_12" />


        <TextView
            android:id="@+id/login_on_login_by_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_34"
            android:layout_marginTop="@dimen/margin_25"
            android:background="@drawable/solide_ccab86_5dp"
            android:gravity="center"
            android:text="@string/string_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_40"
            android:text="@string/string_turn_artfire_code_login"
            android:textColor="@color/text_666"
            android:textSize="@dimen/text_13" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_34"
        android:layout_marginRight="@dimen/margin_34"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                style="@style/line"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/bg"
                android:paddingLeft="@dimen/margin_13"
                android:paddingRight="@dimen/margin_13"
                android:text="@string/string_other_login_way" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_10">

            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="21dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/wechat" />

            <TextView
                android:id="@+id/btn_weixin_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_6"
                android:layout_toRightOf="@+id/iv_wechat"
                android:text="微信授权登录"
                android:textColor="@color/black"
                android:textSize="@dimen/text_12" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
